--- a/tabel.html
+++ b/tabel.html
@@ -26,7 +26,7 @@
     </tr>
     <tr>
         <td> Alamat  </td>
-        <td><img src="avatar.PNG"  width="200" height="200"></td>
+        <td><img src="./avatar.png"></td>
     </tr>
 </table>  
 <button>
