--- a/tabel.html
+++ b/tabel.html
@@ -14,7 +14,7 @@
     <tr>
         <td> Nama  </td>
         <td> Fikri Hidayat</td>
-        <td rowspan="3"></td>
+        <td rowspan="4"></td>
     </tr>
     <tr>
         <td> Nim  </td>
@@ -25,8 +25,8 @@
         <td> komp.nuansa indah 3</td>
     </tr>
     <tr>
-        <td> Alamat  </td>
-        <td><img src="./avatar.png"></td>
+        <td> Profil </td>
+        <td><img src="./avatar.png" height="80" width="80"></td>
     </tr>
 </table>  
 <button>
