--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>index</title>
 </head>
 <body>
+    <h1>FIKRI HIDAYAT</h1>
+    <h1>2022610031</h1>
     <ol>
         <li><a href="identitas.html"target=(_blank)>identitas</a> </li>
         <li><a href="laporan tugas akhir.html"target=(_blank)>laporan tugas akhir</a> </li>
