--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <li><a href="menu dong sie'at.html"target=(_blank)>menu dong sie'at</a> </li>
         <li><a href="tabel.html"target=(_blank)>tabel</a></li>
         <li><a href="penjelasan head dkk.html"target=(_blank)>penjelasan head dkk </head></a> </li>
+        <li><a href="portofolio.html"target=(_blank)>portofolio minggu ke-2 </head></a> </li>
     </ol>
 </body>
 </html>
