--- a/hobbies.html
+++ b/hobbies.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Hobbies</h1>
-    <img src="FG.jpeg"  width="200" height="273">
+    <img src="fg.jpeg"  width="200" height="273">
     <p>"salah satu hobi saya yaitu video editing dan foto hal yang menarik,
         dari hobi ini kadang saya dapat menghasilkan keuntungan, belajar komunikasi ,dan 
         hal menarik lainnya.
