--- a/portofolio.html
+++ b/portofolio.html
@@ -50,6 +50,7 @@
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3989.374007484591!2d100.37164051102357!3d-0.8550854991330112!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2fd4c71fa3daa985%3A0xbd9358afbfe96541!2sKomplek%20Nuansa%20Indah%203!5e0!3m2!1sid!2sid!4v1709217236546!5m2!1sid!2sid" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     <p>© FIKRI. All rights reserved.</p>
   </footer>
+  <a href="index.html">kembali</a>
 </body>
 
 </html>
