--- a/contacme.html
+++ b/contacme.html
@@ -6,6 +6,5 @@
     <title>Document</title>
 </head>
 <body>
-    <h2>Email</h2>
-</body>
+   <p><a href="https://api.whatsapp.com/send/?phone=%2B6282387337572&text&type=phone_number&app_absent=0">whatsapp</a>
 </html>
