--- a/contacme.html
+++ b/contacme.html
@@ -7,4 +7,5 @@
 </head>
 <body>
    <p><a href="https://api.whatsapp.com/send/?phone=%2B6282387337572&text&type=phone_number&app_absent=0">whatsapp</a>
+    <p><a href="https://www.instagram.com/nickfikri0?igsh=NTc4MTIwNjQ2YQ==>Instagram</a>
 </html>
